<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wtf.a42.mopro.sw02.ui_demo.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hslu_mobile_programming"
                android:textAppearance="@android:style/TextAppearance.Material.Title" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/willkommen_zum_zweiten_kursblock"
                android:textAppearance="@android:style/TextAppearance.Material"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_layouts"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/w_hlen_sie_eines_der_folgenden_layouts_f_r_eine_demo" />

            <RadioGroup
                android:id="@+id/rdLayoutDemo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/radioButtonLinearLayout"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radioButtonLinearLayout"
                    style="@android:style/Widget.Material.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/linearlayout"
                    />

                <RadioButton
                    android:id="@+id/radioButtonRelativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/relativelayout"
                    />


            </RadioGroup>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2. Screen-Orientierung und Übersetzung"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Diese Seite hat ein Landscapemodus und eine Schweizerdeutsche Übersetzung" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3. Views und Events"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title" />

            <Button
                android:id="@+id/buttonDemoView"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Aktivity mit demo Views anzeigen" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4. Spinner"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_items"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
